cmake_minimum_required(VERSION 2.8)

set(cmake_cxx_flags -g -Wall -O3 -msse4.2 )
project(corpus)
set(corpus_cxx_sources filewriter.cpp filereader.cpp cache.cpp searcher.cpp utf8.c) 
set(server 0)
if (${server})
set(corpus_cxx_sources ${corpus_cxx_sources} server.cpp)
link_libraries(rt fcgi++ fcgi)
else (${server} )
set(corpus_cxx_sources ${corpus_cxx_sources} main.cpp)
endif (${server} )
add_executable(corpus ${corpus_cxx_sources})
target_link_libraries(corpus)

install(TARGETS corpus RUNTIME DESTINATION bin)
